sri-rajeswari-provisions/kubernetes/manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sri-rajeswari-provisions
  labels:
    project: sri-rajeswari-provisions
    environment: production
